<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HSR Gadget Bibliothek</string>
    <string name="register_activity">Registrierung</string>
    <string name="action_settings">Settings</string>
    <string name="welcome_label">Willkomen zu HSR Gadget Bibliothek</string>
    <string name="login_label">Loggen Sie sich mit Ihren Daten ein oder registrieren Sie sich neu</string>
    <string name="register_label">Geben Sie Ihre Daten ein um einen neuen Account zu registrieren</string>
    <string name="email">E-Mail</string>
    <string name="password">Passwort</string>
    <string name="name_label">Name</string>
    <string name="matrikel_label">Matrikel Nummer</string>
    <string name="login_button">Login</string>
    <string name="register_button">Registrieren</string>
    <string name="title_activity_register">Register</string>
    <string name="name_hintText">Geben Sie Ihre Name und Vorname ein</string>
    <string name="matrikel_nummer_hint">Geben Sie Ihre Matrikel Nummer ein</string>
    <string name="login_msg_email_required">Bitte geben Sie Ihre E-Mail-Adresse ein!</string>
    <string name="login_msg_password_required">Bitte geben Sie Ihr Passwort ein!</string>
    <string name="login_message_successfull">Sie haben sich erfolgreich angemeldet.</string>
    <string name="login_message_not_successfull">Sie konnten nicht angemeldet werden.</string>
    <string name="register_name_required">Bitte geben Sie Ihren Namen ein!</string>
    <string name="register_email_required">Bitte geben Sie Ihre E-Mail-Adresse ein!</string>
    <string name="register_email_correct">Bitte geben Sie eine korrekte E-Mail-Adresse ein!</string>
    <string name="register_matrikel_required">Bitte geben Sie Ihre Matrikel-Nr. ein!</string>
    <string name="register_password_required">Bitte geben Sie ein Passwort ein!</string>
    <string name="register_password_min_lenght_8">Das Passwort muss mindestens 8 Zeichen lang sein!</string>
    <string name="password_mismatch">Die Passwörter stimmen nicht überein!</string>
    <string name="registration_successfull">Die Registration war erfolgreich. Sie können sich nun einloggen.</string>
    <string name="registration_not_successfull">Die Registration konnte nicht abgeschlossen werden.</string>
    <string name="title_activity_main_view">Ihre Aktuellen Ausleihen</string>
    <string name="ausleihen_label">Ihre aktuellen Ausleihen:</string>
    <string name="reservationen_label">Ihre aktuellen Reservationen:</string>
    <string name="password_wiederholen">Passwort wiederholen</string>
    <string name="due_date">Due Date</string>
    <string name="date">Datum</string>
    <string name="display_list_item_activity">Item Detail</string>
    <string name="TODO">TODO</string>
    <string name="gadget_name">Gadget Name</string>
    <string name="listview_activity">List View</string>
    <string name="aktuellen_ausleihen">Ihren aktuellen Ausleihen:</string>
    <string name="reservationen_loeschen">Reservationen löschen</string>
    <string name="reservieren">Reservieren</string>
    <string name="logout">Logout</string>
    <string name="ausgeliehen_bis">Ausgeliehen bis</string>
    <string name="rueckgabe_datum">Rückgabe Datum</string>
    <string name="reservation_loeschen">Reservation löschen</string>
    <string name="reservation_erfassen">Reservation erfassen:</string>
    <string name="selektierte_reservieren">Selektierte reservieren</string>
    <string name="max_3_reservations_message">Sie dürfen maximal 3 Gadgets reservieren!</string>
    <string name="tab_gadgets">Gadgets</string>
    <string name="tab_ausleihen">Ausleihen</string>
    <string name="tab_reservationen">Reservationen</string>
    <string name="loan_ueberfaellig_am">Überfällig am:</string>
    <string name="reservation_gadget_is_ready">Gadget ist bereit</string>
    <string name="reservation_gadget_waiting_position">Warteposition:</string>

</resources>